--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ services:
   davmail:
     image: ${IMAGE_NAME:-kran0/davmail-docker:latest}
     volumes:
+       - ./conf/:/davmail
        - davmail-config:/davmail-config # To save persistent conf data
 #    build:
 #      context: .
@@ -30,6 +31,6 @@ services:
       - 1110:1110
       - 1025:1025
     restart: on-failure
-
+command: ["/davmail/davmail.properties"]
 volumes:
   davmail-config:
